--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <label for="roomId"> Room ID</label> 
         <input type="text" name="roomId" id="roomId">
         <button id='my-button'>Start Stream</button>
+        <a href="/clear">clear</a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="socket.io/socket.io.js"></script>
